--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,12 +6,14 @@
   --background: #ffffff;
   --foreground: #171717;
   --activeground: #0f5bff;
+  --border-color: #030712;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-activeground: var(--activeground);
+  --color-bcolor: --alpha(var(--border-color) / 10%);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
