--- a/src/common/custom.scss
+++ b/src/common/custom.scss
@@ -18,7 +18,7 @@
     &:hover {
       background-color: --alpha(var(--foreground) / 90%);
     }
-    @apply px-4 py-1.5 text-sm text-white leading-5 rounded-md tracking-widest bg-foreground;
+    @apply px-4 py-1.5 text-sm text-white leading-5 cursor-pointer rounded-md tracking-widest bg-foreground;
   }
 
 }
