--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 @import "../common/custom.scss";
 
 :root {
+  --mask: rgba(0, 0, 0, 0.3);
   --background: #ffffff;
   --foreground: #171717;
   --activeground: #0f5bff;
@@ -10,6 +11,7 @@
 }
 
 @theme inline {
+  --color-mask: var(--mask);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-activeground: var(--activeground);
