--- a/src/common/iconfont/iconfont.css
+++ b/src/common/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4634782 */
-  src: url('iconfont.woff2?t=1747826369757') format('woff2'),
-       url('iconfont.woff?t=1747826369757') format('woff'),
-       url('iconfont.ttf?t=1747826369757') format('truetype');
+  src: url('iconfont.woff2?t=1749545620339') format('woff2'),
+       url('iconfont.woff?t=1749545620339') format('woff'),
+       url('iconfont.ttf?t=1749545620339') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,26 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-kongshuju:before {
+  content: "\e7b8";
+}
+
+.icon-zhongqiujie:before {
+  content: "\e628";
+}
+
+.icon-sun:before {
+  content: "\e891";
+}
+
+.icon-tupianjiazaishibai3:before {
+  content: "\e601";
+}
+
+.icon-zujian-tupian:before {
+  content: "\e605";
 }
 
 .icon-zhedie:before {
