--- a/src/common/custom.scss
+++ b/src/common/custom.scss
@@ -5,20 +5,19 @@
       @apply block text-base font-medium;
     }
     .form-item-error-text {
-      @apply absolute text-sm text-red-600;
+      @apply absolute text-sm text-red-500;
     }
   }
   input {
-    @apply block w-full px-3 py-2 bg-white border border-slate-300 rounded text-sm shadow-sm placeholder-slate-400
-    focus:outline-none focus:border-zinc-950 focus:ring-1 focus:ring-zinc-950
-    disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
-    required:outline-red-600 required:border-red-600;
+    @apply block w-full px-3 py-2 bg-white border border-gray-300 rounded text-sm placeholder-gray-400
+    focus:outline-none focus:border-zinc-900 focus:ring-1 disabled:bg-gray-50 disabled:text-gray-500 disabled:border-gray-200
+    required:outline-red-500 required:border-red-500;
   }
   button {
     &:hover {
       background-color: --alpha(var(--foreground) / 90%);
     }
-    @apply px-4 py-1.5 text-sm text-white leading-5 cursor-pointer rounded-md tracking-widest bg-foreground;
+    @apply px-4 py-1.5 text-sm text-background leading-5 cursor-pointer rounded-md tracking-widest bg-foreground;
   }
 
 }
